feat: expand language server support from 3 to 10 languages with comprehensive testing
Major expansion adding 7 new language servers with smart availability detection:

**New Language Servers:**
- JSON (vscode-json-languageserver) - schema validation, .json/.jsonc support
- HTML (vscode-html-languageserver) - .html/.htm support
- CSS (vscode-css-languageserver) - .css/.scss/.sass/.less support
- YAML (yaml-language-server) - schema validation, .yaml/.yml support
- Bash (bash-language-server) - .sh/.bash/.zsh support with ShellCheck integration
- Markdown (vscode-markdown-languageserver) - .md/.markdown link validation
- Java (jdtls) - Eclipse JDT Language Server for .java files

**Technical Improvements:**
- Implemented async server availability detection with Bun.which()
- Added server caching to prevent repeated availability checks
- Distinguished auto-installable (bunx) vs manual install servers
- Fixed Go server configuration (removed bunx, direct gopls call)
- Extended file extension support from 6 to 25+ extensions

**Claude Code Integration:**
- Updated hook to support all new file types for real-time diagnostics
- Extended supported extensions in CLI from 6 to 14 file types
- Maintained backward compatibility with existing functionality

**Comprehensive Testing:**
- Added complete test suites for JSON, YAML, and Bash servers
- Created test fixtures for all new languages (valid/invalid examples)
- Updated hook tests to include stable language servers
- All 15 language server tests now passing

**Documentation:**
- Comprehensive README update with installation requirements
- Added detailed Java setup guide with platform-specific instructions
- Organized auto-install vs manual install server distinctions
- Updated Claude Code integration examples

This represents a 233% increase in supported languages while maintaining the existing robust architecture and adding smart dependency management.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By